# PicoMusic

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  create_audio_graph.py  create_lcd_graph.py
App/Includes/: GenericNodes.h  key_control.h
App/Sources/: cmsis_logo.c  cmsis_texture.c  key_control.cpp  main.cpp
AudioGraph/: AudioGraphNodes.h  audio_scheduler.cpp  audio_scheduler.h
Configuration/: audio_config.py  global_config.py  lcd_config.py  lcd_python_graph_config.h
Configuration/Includes/: audio_graph_config.h  audio_python_graph_config.h  global_config.h  lcd_graph_config.h
Dot/: audio_graph.dot  lcd_graph.dot  pre_schedule_audio_graph.dot  pre_schedule_lcd_graph.dot
LCDGraph/: LCDGraphNodes.h  lcd_scheduler.cpp  lcd_scheduler.h
MiscScripts/: CMakeLists.txt  build.sh  decimFilter.py  genMIDITables.py  genPictures.sh
Nodes/AppSpecific/Animate/: component.hpp  component.py
Nodes/AppSpecific/FFTAmplitude/: component.hpp  component.py
Nodes/Arm2D/: types.py
Nodes/Arm2D/AmplitudeWidget/: component.hpp  component.py  draw_amplitude.c
Nodes/Arm2D/Arm2D/: arm_2d_scene_cmsis_stream.c  arm_2d_scene_cmsis_stream.h  component.hpp  component.py
Nodes/Arm2D/Layer/: component.hpp  component.py  stream_2d_layer.h
Nodes/Arm2D/SpectrumWidget/: component.hpp  component.py  draw_spectrum.c
Nodes/Generic/: types.py
Nodes/Generic/CFFT/: component.hpp
Nodes/Generic/Decimate/: component.hpp  component.py
Nodes/Generic/FilterAndDecimate/: component.hpp  component.py
Nodes/Generic/Gain/: component.hpp  component.py
Nodes/Generic/ImageBuffer/: component.hpp  component.py
Nodes/Generic/LineWidget/: component.hpp  component.py
Nodes/Playtune_synth/: Playtune.h  README.md  README.txt  types.py
Nodes/Playtune_synth/Enveloppe/: component.hpp  component.py
Nodes/Playtune_synth/Sequencer/: c_component.h  component.hpp  component.py
Nodes/Playtune_synth/Waveform/: component.hpp  component.py
Nodes/RP2/BlockWidget/: component.hpp  component.py
Nodes/RP2/FromOtherCore/: component.hpp  component.py
Nodes/RP2/ToOtherCore/: component.hpp  component.py
Nodes/RP2/lcd/: c_component.h  component.hpp  component.py
Nodes/RP2/pwm_audio/: c_component.h  component.hpp  component.py
Playtune_synth/: instruments.cpp  synth_Playtune_waves.cpp
Songs/: README.md  The-Empire-Strikes-Back-(From-'Starwars').c  dorian.c  empire.c  songs.c  songs.h
